# m5stack-atom-matrix

./: AGENTS.md  Cargo.toml  README.md  TODO.md
docs/: .gitignore  HARDWARE.md
src/: led.rs
